<resources>

    <string name="action_custom_period_filter">Выбрать период</string>
    <string name="action_info_about">О приложении</string>
    <string name="action_info_version">Версия</string>
    <string name="action_period_month_filter">Последний месяц</string>
    <string name="action_period_today_filter">Сегодня</string>
    <string name="action_period_week_filter">Последняя неделя</string>
    <string name="action_reports_filter">Фильтр</string>
    <string name="action_reports_period">Период</string>
    <string name="action_reports_stores_filter">Магазины</string>
    <string name="anonymous">Администратор</string>
    <string name="app_name">Монитор отчетов</string>

    <string name="check_connection">Проверка интернет соединения</string>
    <string name="conversion_field">Конверсия</string>
    <string name="conversion_report_activity_name">Конверсия посетителей</string>
    <string name="conversion_report_detail_activity_name">Конверсия посетителей по дням</string>
    <string name="day_field">День</string>
    <string name="developers">Разработчики</string>
    <string name="fact_field">Факт</string>
    <string name="fullness_field">Наполняемость</string>
    <string name="fullness_report_activity_name">Наполняемость чеков</string>

    <string name="loading_stores">Загрузка магазинов</string>
    <string name="loading_users">Загрузка пользователей</string>
    <string name="login_activity_name">Вход в систему</string>
    <string name="month_field">Месяц</string>
    <string name="dialog_choose_store_title">Выберите магазин</string>
    <string name="dialog_choose_period_title">Выберите период</string>
    <string name="dialog_vpn_settings_title">Необходимо подключение VPN. Открыть сетевые настройки?</string>
    <string name="dialog_net_settings_title">Необходимо подключение к сети. Открыть сетевые настройки?</string>

    <string name="plan_field">План</string>
    <string name="sales_report_activity_name">Показатели продаж</string>
    <string name="selected_stores_hint">Список магазинов, участвующих в отборе</string>
    <string name="splash_text">Загрузка</string>
    <string name="stores_field">Магазины</string>
    <string name="swipe_to_refresh">Потяните чтобы обновить</string>
    <string name="title_activity_reports">Отчеты</string>
    <string name="title_activity_splash">Загрузка данных</string>
    <string name="turnover_report_activity_name">Товарооборот</string>
    <string name="repeat_button_title">Повторить</string>
    <string name="action_exit">Выйти</string>

    <string name="on_error_check_connection">Нет интернет подключения</string>
    <string name="on_error_connection">Ошибка подключения к сети</string>
    <string name="on_error_loading">Ошибка загрузки данных</string>
    <string name="on_error_chosen_period">Не выбран период</string>
    <string name="on_error_chosen_stores">Не выбрано ни одного магазина</string>
    <string name="on_error_process">Ошибка обработки данных</string>
    <string name="on_error_wrong_login_pass">Неверный логин/пароль</string>

</resources>
